Substrate anlaysis draft

--- a/models/Adjusted_models/create_pathway.ipynb
+++ b/models/Adjusted_models/create_pathway.ipynb
@@ -13,6 +13,9 @@
     "\n",
     "model ... needs to be handed a model, since it doesnt import it itself to save time when function if called multiple times  \n",
     "path_selector ... determines which path is added  \n",
+    "Import the function into your script with the following code, thic function script has to be in the same folder.  \n",
+    "   \n",
+    "_%run -i create_pathway.ipynb_\n",
     "### Pathway legend\n",
     "0 -> no additional reactions  \n",
     "1 -> beta alanine pathway  \n",
@@ -247,20 +250,20 @@
    "outputs": [],
    "source": [
     "# Transport reaction cytosol -> extracellular\n",
-    "mac_ctoe = Reaction('mac_c-e')\n",
-    "mac_ctoe.name = 'Malonic acid trans c -> e'\n",
+    "mln_ctoe = Reaction('mln_c-e')\n",
+    "mln_ctoe.name = 'Malonic acid trans c -> e'\n",
     "malonic_acid_e = Metabolite(id='mln_e', compartment='e')\n",
     "malonic_acid_e.name = 'Malonic acid'\n",
     "malonic_acid_e.formula = 'C3H2O4'\n",
-    "mac_ctoe.add_metabolites({malonic_acid_c: -1,\n",
+    "mln_ctoe.add_metabolites({malonic_acid_c: -1,\n",
     "                           malonic_acid_e: 1})\n",
     "# Removal reaction\n",
-    "EX_mac = Reaction('EX_mac_e')\n",
-    "EX_mac.name = 'Malonic acid ex/inport'\n",
-    "EX_mac.add_metabolites({malonic_acid_e: -1})\n",
+    "EX_mln = Reaction('EX_mln')\n",
+    "EX_mln.name = 'Malonic acid ex/inport'\n",
+    "EX_mln.add_metabolites({malonic_acid_e: -1})\n",
     "\n",
     "# set up transport path\n",
-    "transport = [mac_ctoe, EX_mac]\n",
+    "transport = [mln_ctoe, EX_mln]\n",
     "#model.add_boundary(model.metabolites.malonic_acid_c, type='demand')"
    ]
   },
