--- a/models/Adjusted_models/iMT1026_adjustments.ipynb
+++ b/models/Adjusted_models/iMT1026_adjustments.ipynb
@@ -1545,13 +1545,7 @@
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_2mbald_e \"2-Methylbutanal\">\n",
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_2mbtoh_e \"2-methyl-1-butanol\">\n",
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_2mppal_e \"2-methylpropanal\">\n",
-      "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_2phetoh_e \"2-Phenylethanol\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_2phetoh_e \"2-Phenylethanol\">\n",
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_3c3hmp_e \"3-Carboxy-3-hydroxy-4-methylpentanoate\">\n",
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_3mbald_e \"3-Methylbutanal\">\n",
       "Use of FORMULA in the notes element is discouraged, use fbc:chemicalFormula instead: <Species M_3mop_e \"(S)-3-Methyl-2-oxopentanoate\">\n",
@@ -4629,13 +4623,7 @@
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FKYNH \"N-Formyl-L-kynurenine amidohydrolase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FMETTRSm \"Methionyl-tRNA formyltransferase, mitochondrial\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FMETTRSm \"Methionyl-tRNA formyltransferase, mitochondrial\">\n",
-      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FMNAT \"FMN adenylyltransferase\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FMNAT \"FMN adenylyltransferase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FMNAT \"FMN adenylyltransferase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FORt \"formate transport via diffusion\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FRTT \"farnesyltranstransferase\">\n",
@@ -4747,13 +4735,7 @@
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_GTHS \"glutathione synthetase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_GTPCII \"GTP cyclohydrolase II\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_GTPCII \"GTP cyclohydrolase II\">\n",
-      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_GTPH1 \"GTP diphosphohydrolase\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_GTPH1 \"GTP diphosphohydrolase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_GTPH1 \"GTP diphosphohydrolase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_GUAD \"guanine deaminase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_GUAD \"guanine deaminase\">\n",
@@ -5160,13 +5142,7 @@
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_RBFSb \"riboflavin synthase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_RBFSb \"riboflavin synthase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_RBK \"ribokinase\">\n",
-      "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_RBK \"ribokinase\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_RBK \"ribokinase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_RNDR1 \"ribonucleoside-diphosphate reductase (ADP)\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_RNDR1 \"ribonucleoside-diphosphate reductase (ADP)\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_RNDR2 \"ribonucleoside-diphosphate reductase (GDP)\">\n",
@@ -5566,13 +5542,7 @@
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_2mppal \"2-methylpropanal exchange\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_2phetoh \"2-Phenylethanol exchange\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_3c3hmp \"3-Carboxy-3-hydroxy-4-methylpentanoate exchange\">\n",
-      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_3mbald \"3-Methylbutanal exchange\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_3mbald \"3-Methylbutanal exchange\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_3mop \"(S)-3-Methyl-2-oxopentanoate exchange\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_4abz \"4-Aminobenzoate exchange\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_Ex_5aop \"5-Aminolevulinate exchange\">\n",
@@ -5803,13 +5773,7 @@
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FAE1_26 \"tetracosanoyl-CoA:malonyl-CoA C-acyltransferase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FAE2_14 \"3-tetradecanoyl-CoA reductase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FAE2_14 \"3-tetradecanoyl-CoA reductase\">\n",
-      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FAE2_16 \"3-hexadecanoyl-CoA reductase\">\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FAE2_16 \"3-hexadecanoyl-CoA reductase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FAE2_16 \"3-hexadecanoyl-CoA reductase\">\n",
       "Encoding LOWER_BOUND and UPPER_BOUND in KineticLaw is discouraged, use fbc:fluxBounds instead: <Reaction R_FAE2_18 \"3-octadecanoyl-CoA reductase\">\n",
       "Use of GENE ASSOCIATION or GENE_ASSOCIATION in the notes element is discouraged, use fbc:gpr instead: <Reaction R_FAE2_18 \"3-octadecanoyl-CoA reductase\">\n",
