Split mal-CoA pathway and bugfixes

--- a/models/Adjusted_models/create_pathway.ipynb
+++ b/models/Adjusted_models/create_pathway.ipynb
@@ -19,8 +19,9 @@
     "### Pathway legend\n",
     "0 -> no additional reactions  \n",
     "1 -> beta alanine pathway  \n",
-    "2 -> malonyl-CoA pathway  \n",
-    "3 -> lactate pathway  "
+    "2 -> transferase malonyl-CoA pathway  \n",
+    "3 -> oxidoreuctive malonyl-CoA pathway  \n",
+    "4 -> lactate pathway  "
    ]
   },
   {
@@ -30,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_name = ['no additional reactions','beta alanine pathway','malonyl-CoA pathway','lactate pathway']"
+    "path_name = ['no additional reactions','beta alanine pathway','trans malonyl-CoA pathway','red malonyl-CoA pathway','lactate pathway']"
    ]
   },
   {
@@ -38,7 +39,8 @@
    "id": "0dc57455",
    "metadata": {},
    "source": [
-    "### Beta alanine pathway"
+    "### Beta alanine pathway\n",
+    "The first step of the pathway, where mealonic semialdehyde gets produced from beta alanine, is alreayd present in the used model, so only the step to malonic acid has to be added."
    ]
   },
   {
@@ -80,7 +82,39 @@
    "id": "ba5bc53d",
    "metadata": {},
    "source": [
-    "### Malonyl-CoA route"
+    "### Malonyl-CoA route\n",
+    "There are two ways to Malonyl-CoA, one directly to malonic acid through a transferase reaction and the other by a Oxidoreductase reaction where malonly gets split into malonic semialdehyde and CoA while consuming NADPH. Here the first route is utalized, but can be switched manually to the second one.  \n",
+    "In case Option B is included, the reaction beta-alanine to malonic semialdehyde should be blocked, otherwise the simulation will result in the same rate as path 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f58b4d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# malonyl_option = 'A'\n",
+    "# valid options A or B, see below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f11303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option A\n",
+    "# Acetyl-CoA:malonate CoA-transferase\n",
+    "malcoa_trans = Reaction('MCOATR')\n",
+    "malcoa_trans.name = '# Acetyl-CoA:malonate CoA-transferase'\n",
+    "#Acetate + Malonyl-CoA <=> Acetyl-CoA + Malonate\n",
+    "\n",
+    "malcoa_trans.add_metabolites({model.metabolites.ac_c: -1,\n",
+    "                                 model.metabolites.malcoa_c: -1,\n",
+    "                                 model.metabolites.accoa_c: 1,\n",
+    "                                 malonic_acid_c: 1})"
    ]
   },
   {
@@ -90,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Option B\n",
     "# 3-oxopropanoate:NADP+ oxidoreductase (CoA-malonylating)\n",
     "malcoa_red = Reaction('MCOARED')\n",
     "malcoa_red.name = '3-oxopropanoate:NADP+ oxidoreductase (CoA-malonylating)'\n",
@@ -111,7 +146,10 @@
    "outputs": [],
    "source": [
     "# set up pathway\n",
-    "malcoa_path = [malcoa_red, mal_semal_dehydr]"
+    "# if malonyl_option == 'A':  # Option A\n",
+    "trans_malcoa_path = [malcoa_trans]\n",
+    "# elif malonyl_option =='B': # Option B\n",
+    "red_malcoa_path = [malcoa_red, mal_semal_dehydr]\n"
    ]
   },
   {
@@ -239,7 +277,8 @@
    "id": "1aaaac41",
    "metadata": {},
    "source": [
-    "### Transport reactions for malonic acid"
+    "### Transport reactions for malonic acid\n",
+    "For a more realistic model, the transport reaction from the cytosol, where all the reactions in this case take part, to the extracellular space, as well as the removeal reaction Ex_mln are included."
    ]
   },
   {
@@ -258,7 +297,7 @@
     "mln_ctoe.add_metabolites({malonic_acid_c: -1,\n",
     "                           malonic_acid_e: 1})\n",
     "# Removal reaction\n",
-    "EX_mln = Reaction('EX_mln')\n",
+    "EX_mln = Reaction('Ex_mln')\n",
     "EX_mln.name = 'Malonic acid ex/inport'\n",
     "EX_mln.add_metabolites({malonic_acid_e: -1})\n",
     "\n",
@@ -282,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathways = [[],beta_al_path,malcoa_path,lactate_path]"
+    "pathways = [[],beta_al_path,trans_malcoa_path,red_malcoa_path,lactate_path]"
    ]
   },
   {
@@ -295,9 +334,12 @@
     "def create_pathway(model, path_selector=0):\n",
     "    model.add_reactions(pathways[path_selector])\n",
     "    model.add_reactions(transport)\n",
-    "    if path_selector == 3:\n",
+    "    if path_selector == 4:  # force organism in the malonic acid pathway as indicated in the lactate route\n",
     "        model.reactions.APAT2r.upper_bound = 0\n",
     "        model.reactions.L_LACD2cm.upper_bound = 0\n",
+    "    elif path_selector == 3: #and malonyl_option =='B' to force the malonic semialdehyde (precursor) production through malonyl-CoA instead of beta alnine path\n",
+    "        model.reactions.APAT2r.upper_bound = 0\n",
+    "\n",
     "    print('Added', path_name[path_selector])\n",
     "    return model"
    ]
