Philipps discussion (draft)

--- a/models/Adjusted_models/create_pathway.ipynb
+++ b/models/Adjusted_models/create_pathway.ipynb
@@ -296,13 +296,12 @@
     "malonic_acid_e.formula = 'C3H2O4'\n",
     "mln_ctoe.add_metabolites({malonic_acid_c: -1,\n",
     "                           malonic_acid_e: 1})\n",
-    "# Removal reaction\n",
-    "EX_mln = Reaction('Ex_mln')\n",
-    "EX_mln.name = 'Malonic acid ex/inport'\n",
-    "EX_mln.add_metabolites({malonic_acid_e: -1})\n",
-    "\n",
+    "# Removal reaction -> alernativ implementation as boundary within the create_pathway function\n",
+    "# Ex_mln = Reaction('Ex_mln')\n",
+    "#Ex_mln.name = 'Malonic acid ex/inport'\n",
+    "#Ex_mln.add_metabolites({malonic_acid_e: -1})\n",
     "# set up transport path\n",
-    "transport = [mln_ctoe, EX_mln]\n",
+    "transport = [mln_ctoe]\n",
     "#model.add_boundary(model.metabolites.malonic_acid_c, type='demand')"
    ]
   },
@@ -334,6 +333,7 @@
     "def create_pathway(model, path_selector=0):\n",
     "    model.add_reactions(pathways[path_selector])\n",
     "    model.add_reactions(transport)\n",
+    "    model.add_boundary(model.metabolites.get_by_id('mln_e'), type='demand', reaction_id = 'Ex_mln')\n",
     "    if path_selector == 4:  # force organism in the malonic acid pathway as indicated in the lactate route\n",
     "        model.reactions.APAT2r.upper_bound = 0\n",
     "        model.reactions.L_LACD2cm.upper_bound = 0\n",
