Add FSEOF and loopless analysis, minor updates other files

--- a/OptAlgorithms/GrowthCouplingPotential.ipynb
+++ b/OptAlgorithms/GrowthCouplingPotential.ipynb
@@ -13,10 +13,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3a378d0-c057-4f94-b88d-324213c61189",
+   "metadata": {},
+   "source": [
+    "# **NOTE: These analyses did not work!**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8ead15ff-bcfe-4288-930b-b10d5f9bd694",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -849,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "58fba6bd-23a7-4a16-9f33-711369054cfc",
    "metadata": {},
    "outputs": [],
@@ -860,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "bd6083c0-0ea7-4bb8-906c-7e7a35c152c1",
    "metadata": {},
    "outputs": [
@@ -871,6 +882,14 @@
       "Set parameter Username\n",
       "Academic license - for non-commercial use only - expires 2022-01-13\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\abele\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\group.py:107: UserWarning: need to pass in a list\n",
+      "  warn(\"need to pass in a list\")\n"
+     ]
     }
    ],
    "source": [
@@ -878,68 +897,26 @@
     "model = read_sbml_model('../models/Adjusted_models/iMT1026-v3_MalonicAcid.xml')\n",
     "\n",
     "# Change carbon source to methanol\n",
-    "# medium = model.medium\n",
-    "# medium['Ex_glyc'] = 0\n",
-    "# medium['Ex_meoh'] = 10\n",
-    "# model.medium = medium\n",
+    "medium = model.medium\n",
+    "medium['Ex_glyc'] = 0\n",
+    "medium['Ex_meoh'] = 10\n",
+    "model.medium = medium\n",
     "\n",
     "# Remove ATP maintenance requirement, as it has a forced flux\n",
-    "# model.reactions.ATPM.delete()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5af9ba50-f1d5-43d4-8c13-3b754753dd22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Name</strong></td>\n",
-       "                <td>iMT1026v3</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x01cb3a531100</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Number of metabolites</strong></td>\n",
-       "                <td>1708</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Number of reactions</strong></td>\n",
-       "                <td>2241</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Number of groups</strong></td>\n",
-       "                <td>77</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Objective expression</strong></td>\n",
-       "                <td>1.0*Ex_biomass - 1.0*Ex_biomass_reverse_5354f</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartments</strong></td>\n",
-       "                <td>Vacuole, Cytosol, Mitochondria, Peroxisome, Extracellular space, Endoplasmic Reticulum, Golgi Apparatus, Nucleus, Mitochondrial intermembrane space</td>\n",
-       "            </tr>\n",
-       "          </table>"
-      ],
-      "text/plain": [
-       "<Model iMT1026v3 at 0x1cb3a531100>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model"
+    "model.reactions.ATPM.delete()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "id": "8ee49b99-829a-4998-9eb4-3240d1b332c7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
