--- a/OptAlgorithms/OptCouple.ipynb
+++ b/OptAlgorithms/OptCouple.ipynb
@@ -135,6 +135,9 @@
    "execution_count": 43,
    "id": "86dd4b6d-e5e8-46a0-a474-b307e34fc28a",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -214,6 +217,9 @@
    "execution_count": 46,
    "id": "7bc69b32-a698-4605-85ec-52194e3509f3",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -347,6 +353,10 @@
    "execution_count": 47,
    "id": "e3547967-2009-4732-b7df-92f9f8c7fd60",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -673,7 +683,13 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "a72f5836-13fd-4d38-a605-b6329d26c1ff",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
