Clean the directories

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -27,10 +27,13 @@
    "source": [
     "The natural occurring substance malonic acid was first discovered in beetroots. Even though is was first prepared in 1858 (Encyclopædia Britannica), its relevance in todays market is not declining. Malonic acid is traditionally produced synthetically from nonrenewable petroleum feedstock. During this process ester groups have to be added using an alcohol (Hildbrand, 2001). Using non renewable resources is neither environmentally friendly, nor will it be financially lucrative in the future. The company Lygos Inc. has therefore developed a patented method to produce malonic acid through fermentation of genetically modified *Pichia Kudriavzevii* yeast cells (Peters, 2018). These efforts have been taken on due to the vast amount of uses for malonic acid in modern industry.\n",
     "\n",
+    "<center>\n",
     "\n",
     "![Malonic acid](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/main/img/malonic_acid.png?token=AFITQ5WD4ATJULL32TF6LELBUJ3AU \"Malonic acid\")\n",
     "\n",
     "*Figure 1*:  Molecular Structure of Malonic Acid.\n",
+    "\n",
+    "</center>\n",
     "\n",
     "The molecule is often used as a precursor, as it can be converted into 1,3 propanediol - a precursor for polyesters and polymers. Furthermore malonic acid is used in the electronics, flavor, pharmaceutical, fragrance and coating industry. According to market research, the rising interest in the compound will lead to an increase in sales of the compound (Global Industry Report). Political pressure to utilize bio-based synthetic compounds will further expand the market for malonic acid. It is predicted to go from USD 46 million in 2020 to USD 55 million by the end of 2027 (Malonic Acid Market 2021 Comprehensive Report).\n",
     "\n",
@@ -91,16 +94,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The goal of this project is to model and optimize a hypothetical _K. phaffii_ strain for the production of malonic acid. K phaffii does not natively produce malonic acid, thus the enzymes responsible for the missing metabolic steps need to be introduced in the strain. The genes will be integrated into the metabolic model [placeholder model], previously described by [placeholder author]. The strain will be optimized for growth on [placholder substrate] as a cheap substrate. Finally, as _K. phaffii_ has the tendency to invest resources into growth rather than production of secondary metabolites, through the knockout of competing, non-vital pathways we will try to optimize the metabolic flux towards the product, while maintaining growth rate at a reasonable level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Selection and assessment of existing GSM (<500 words)\n",
     "\n",
-    "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality.\n",
+    "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality. The memote reports can be found [here](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/tree/main/reports).\n",
+    "<center>\n",
     "\n",
-    "|                        | PpaMBEL1254 | iPP668 | iLC915 |\n",
-    "|------------------------|-------------|--------|--------|\n",
+    "|                            | PpaMBEL1254 | iPP668 | iLC915 |\n",
+    "|----------------------------|-------------|--------|--------|\n",
     "| __Number of metabolites__  | 1058        | 1178   | 2301   |\n",
     "| __Number of reactions__    | 1254        | 1361   | 1506   |\n",
     "| __Number of compartments__ | 1           | 8      | 8      |\n",
     "| __Memote overall score__   | 19%         | 20%    | 27%    |\n",
+    "\n",
+    "</center>\n",
     "\n",
     "There has since been improvements and reconstructions of these three models. Among others was on update from 2016 for more accurate predictions to native and humanized glycosylation of recombinant proteins(Irani, 2015). Here, the number of metabolites and reactions were increased to 1443 and 1595 respectively and mass balance was improved with 19.7% (cf. memote reports). In 2016 the three models were also merged together, to form the model iMT1026 (Tomàs-Gamisans, 2016). This model was later improved for better predictions of growth on methanol (Tomàs-Gamisans, 2017) iMT1026.V3 which is relevant for our case study. The reconstruction tools CarveMe and KBase was also experimented with. While CarveMe yields impressive memote results, including correct annotation that iMT1026 lacks, it produces a model with only three compartments which is not representative for a fungal organism such as P. Pastoris. After a lot of effort, Kbase was successfully used to create a fungal model from the K. phaffii refseq from NCBI. The memote results were however not very promising. A script was set up to test if the two models predicted growth on the minimal medium proposed in (Tomàs-Gamisans, 2017) with methanol as sole carbon source. It was not possible for either. Collecting the non-carbon medium components necessary for growth and adding that to the base medium, allowed the CarveMe model to have small but positive growth rates while the Kbase model still could not utilize methanol. Finally, iMT1026.V3 was selected for our project as it represents some of the most recent advancement in the P. pastoris reconstruction field and has been validated experimentally for growth on methanol. It, hopefully, implies that the mechanisms of the central metabolism have been accurately replicated. The introduction of malonate producing pathways mostly relies on this metabolic regime being representative, since the reactions do not branch far away from the central metabolism. The model only gets an overall memote score of 19%, but this is due to missing annotation and charge balancing. It has 100% metabolite connectivity and 90.6% mass balancing and should be able to produce reliable predictions to some extent. A concern however arises from the missing charge balance, causing errors in the non-growth associated maintenance reaction. It is known that maintenance becomes more relevant for low growth rates in fermentation and genetically engineered P. pastoris growing on methanol is expected to be quite slow. Hopefully, this will not influence the results too much but should nonetheless be kept in mind."
    ]
@@ -123,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the literature there are 4 possibilities to create malonic acid from methanol. These pathways are added using the script [create_pathway](scripts/create_pathway.ipynb). "
+    "According to the literature there are 4 possibilities to create malonic acid from methanol. These pathways are added using the script [create_pathway](https://github.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/blob/main/scripts/create_pathway.ipynb). "
    ]
   },
   {
