Elaborate on text in scripts

--- a/scripts/Optimizing_the_use_of_malonic-semialdehyde.ipynb
+++ b/scripts/Optimizing_the_use_of_malonic-semialdehyde.ipynb
@@ -153,6 +153,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d8d2fd2",
+   "metadata": {},
+   "source": [
+    "As seen, some of malonate-semialdehyde is spent for acetylcoa production by MMSAD3. This should be avoided in vivo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d18986c4",
@@ -343,6 +351,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8daf078b",
+   "metadata": {},
+   "source": [
+    "No significant change is discovered. Investigating the fluxes at a constrained growth rate:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "931a1b51",
@@ -391,9 +407,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abdb2d58",
+   "id": "69e05e29",
    "metadata": {},
-   "source": []
+   "source": [
+    "The range of both APAT2r and BABAT is the same and the paths can be used interchangeably. In vivo this might not be the case due to enzymatic constraints."
+   ]
   }
  ],
  "metadata": {
