Change README.md files

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -565,8 +565,7 @@
     "## 5. Discussion (<500 words)\n",
     "\n",
     "\n",
-    "\n",
-    "Adding a discussion as a test Number 2."
+    "change"
    ]
   },
   {
