Edit main README.md

--- a/scripts/create_pathway.ipynb
+++ b/scripts/create_pathway.ipynb
@@ -20,7 +20,7 @@
     "0 -> no additional reactions  \n",
     "1 -> beta alanine pathway  \n",
     "2 -> transferase malonyl-CoA pathway  \n",
-    "3 -> oxidoreuctive malonyl-CoA pathway  \n",
+    "3 -> oxidoreductive malonyl-CoA pathway  \n",
     "4 -> lactate pathway  "
    ]
   },
