Correct GSM paths

--- a/scripts/Methanol_assmilation.ipynb
+++ b/scripts/Methanol_assmilation.ipynb
@@ -10,7 +10,7 @@
     "# Importing used packages and model\n",
     "from cobra.io import read_sbml_model\n",
     "from cobra import Reaction, Metabolite\n",
-    "model = read_sbml_model('iMT1026-v4.xml')\n",
+    "model = read_sbml_model('../src/models/gen/iMT1026-v3.1.xml')\n",
     "%run -i create_pathway.ipynb  # runs other script with included function to alter model"
    ]
   },
@@ -281,7 +281,7 @@
     "    \n",
     "import escher\n",
     "from IPython.display import display\n",
-    "b = escher.Builder(map_json = 'iMM904.Central_carbon_metabolism.json', reaction_data = solution.fluxes.to_dict(),highlight_missing=True, model=model)\n",
+    "b = escher.Builder(map_json = '../misc/iMM904.Central_carbon_metabolism.json', reaction_data = solution.fluxes.to_dict(),highlight_missing=True, model=model)\n",
     "display(b)\n",
     "    "
    ]
@@ -766,7 +766,7 @@
     "    solution = model.optimize()\n",
     "    print(model.metabolites.nadh_c.summary(fva=1.0))\n",
     "    print(model.metabolites.nadph_c.summary(fva=1.0))\n",
-    "b = escher.Builder(map_json = 'iMM904.Central_carbon_metabolism.json', reaction_data = solution.fluxes.to_dict(),highlight_missing=True, model=model)\n",
+    "b = escher.Builder(map_json = '../misc/iMM904.Central_carbon_metabolism.json', reaction_data = solution.fluxes.to_dict(),highlight_missing=True, model=model)\n",
     "display(b)    \n",
     "    "
    ]
