--- a/scripts/Substrate_alternatives.ipynb
+++ b/scripts/Substrate_alternatives.ipynb
@@ -52,7 +52,6 @@
     "#3 -> oxidoreuctive malonyl-CoA pathway\n",
     "#4 -> lactate pathway  \n",
     "#create_pathway(model,3)  # self-built function create_pathway(model, path_selector), that adds pathway\n",
-    "factor_growth = 0.5\n",
     "beta_model = create_pathway(model.copy(),1)\n",
     "trn_malonyl_model = create_pathway(model.copy(),2)\n",
     "red_malonyl_model = create_pathway(model.copy(),3)\n",
@@ -1075,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "93d77043",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f8415248",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "057f0777",
    "metadata": {
     "scrolled": true
@@ -1527,7 +1526,7 @@
        "L-Isoleucine                                  0.46     0.23    C6H13NO2  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,21 +1540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a06e61fe",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<AxesSubplot:title={'center':'MA production with different substrates at 50% growth'}, ylabel='C-mol based flux in mmol MA / (gDW*h)'>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-986e2f3c5fd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0marguments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Beta-Alanine'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Malonyl-CoA Transferase'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Malonyl-CoA Oxidored'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Lactate'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msubstrate_table\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0marguments\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'bar'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m18\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mylabel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'C-mol based flux in mmol MA / (gDW*h)'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'MA production with different substrates at 50% growth'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msavefig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../img/substrates_ma_cons.png'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
     },
     {
      "data": {
@@ -1573,7 +1573,8 @@
    "source": [
     "arguments = list(substrate_table.columns)\n",
     "arguments = ['Beta-Alanine', 'Malonyl-CoA Transferase', 'Malonyl-CoA Oxidored', 'Lactate']\n",
-    "substrate_table.plot(y= arguments, kind='bar', figsize=(18,10), ylabel = 'C-mol based flux in mmol MA / (gDW*h)', title = 'MA production with different substrates at 50% growth')"
+    "substrate_table.plot(y= arguments, kind='bar', figsize=(18,10), ylabel = 'C-mol based flux in mmol MA / (gDW*h)', title = 'MA production with different substrates at 50% growth')\n",
+    "plt.savefig('../img/substrates_ma_cons.png')"
    ]
   },
   {
